--- a/CS.tex
+++ b/CS.tex
@@ -11,9 +11,9 @@ fleqn
 \author{Huu Duc Nguyen}
 \authordegreefront{}
 \authordegreeback{ M.Sc.}
-\subject{AI}
-\title{AI Notes}
-\date{29 February 2022}
+\subject{CS}
+\title{CS Notes}
+\date{20 January 2023}
 
 \begin{document}
 \setlength{\abovedisplayskip}{3pt}
@@ -25,19 +25,12 @@ fleqn
 
 \mainmatter
 \include{Contents/abbrievations.tex}
-\include{Contents/ai-intro.tex}
-\include{Contents/ml-intro.tex}
-\include{Contents/probabilities.tex}
-\include{Contents/basic-ml-prob.tex}
-\include{Contents/feature-engineering.tex}
-\include{Contents/error-functions.tex}
-\include{Contents/neural-network.tex}
-\include{Contents/network-structures.tex}
-\include{Contents/word-embeddings.tex}
-\include{Contents/generative-models.tex}
-\include{Contents/hyperparameter-optimization.tex}
-\include{Contents/deep-transfer-learning.tex}
-\include{Contents/technical-tools-ML.tex}
+\include{Contents/CS-introduction.tex}
+\include{Contents/data-structures.tex}
+\include{Contents/CS-algorithms.tex}
+\include{Contents/devops.tex}
+\include{Contents/CS-review-questions.tex}
+\include{Contents/technical-tools-CS.tex}
 
 \backmatter
 \pagenumbering{Roman}
