--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -7,7 +7,6 @@
 \acro{AGI}{Artificial General Intelligence}
 \acro{ML}{Machine Learning}
 \acro{DL}{Deep Learning}
-\acro{CS}{Computer Science}
 \acro{CV}{Computer Vision}
 \acro{RL}{Reinforcement Learning}
 \acro{NLP}{Natural Language Processing}
@@ -154,5 +153,20 @@
 \acro{BMI}{Brain Machine Interface}
 \acro{NMP}{neuromotor prostheses}
 \acro{PSD}{Power Spectral Density}
+
+% Computer Science
+\acro{CS}{Computer Science}
+\acro{DS}{Data Structure}
+\acro{DSA}{Data Structure \& Algorithms}
+\acro{ADT}{Abstract Data Type}
+\acro{BST}{Binary Search Tree}
+\acro{BBST}{Balanced Binary Search Tree}
+\acro{DFS}{Depth First Search}
+\acro{BFS}{Breadth First Search}
+\acro{LIFO}{Last In First Out}
+\acro{FIFO}{First In First Out}
+\acro{devops}{Development and Operations}
+\acro{TDD}{Test Driven Development}
+\acro{CI}{Continuous Integration}
 
 \end{acronym}
