--- a/Contents/basic-ml-prob.tex
+++ b/Contents/basic-ml-prob.tex
@@ -346,6 +346,7 @@ However, in general, $\mathbb{E}_{COM} < \mathbb{E}_{AV}$
 \section{Bagging}
 \label{sec:bagging}
 \begin{itemize}
+	\item Check \href{https://youtu.be/2Mg8QD0F1dQ}{Udacity's video}
 	\item \ac{aka} Bootstrap aggregating
 	\item Average $\approx$ 63\%
 \end{itemize}
@@ -373,6 +374,12 @@ However, in general, $\mathbb{E}_{COM} < \mathbb{E}_{AV}$
 \end{itemize}
 
 \subsection{Adaboost}
+Resources:
+\begin{itemize}
+	\item \href{https://youtu.be/LsK-xG1cLYA}{AdaBoost, Clearly Explained}
+	\item 
+\end{itemize}
+
 \begin{enumerate}
 	\item First weak classifier
 	\item Calculate error $J \Rightarrow \varepsilon$\\
@@ -430,6 +437,7 @@ However, in general, $\mathbb{E}_{COM} < \mathbb{E}_{AV}$
 \todo{Add function graph}
 
 \subsection{Gradient Boosting (Regression)}
+Check: A Gentle Introduction to Gradient Boosting - Cheng Li, CCS, Northeastern Uni
 \begin{align}
 	& (x_i, y_i) \text{ and first model } F_1(x)\\
 	\Rightarrow & \text{ fit } F_2(x) \text{ to } (x_i, y_i - F_1(x_i)), \quad y_i - F_1(x_i)=h(x_i)	\text{ as the residuals}\\
