--- a/Contents/natural-planning-model.tex
+++ b/Contents/natural-planning-model.tex
@@ -108,7 +108,7 @@ A library of primitive actions plays a great role. A primitive action should be 
 Generality implies that if we want to go to 1 from 0, we don't want to step by step specify it to go to 0.1, 0.2, \etc. What we want is for it to go to the neighbor of 1 in one single movement.
 
 \begin{itemize}
-	\item Motor primitives \todo{sth}
+	\item Motor primitives \cite{ijspeert2002movement}
 	\item \todo{}
 \end{itemize}
 
