--- a/Contents/neural-network.tex
+++ b/Contents/neural-network.tex
@@ -126,6 +126,8 @@ Check derivative:
 
 \section{Normalization}
 \subsection{BatchNorm}
+Check: \href{https://youtu.be/DtEq44FTPM4}{Batch Normalization - EXPLAINED!}
+
 \ac{BatchNorm} normalizes the mean and standard deviation for each individual feature channel \cite{ioffe2015batch}. Given an input batch $x$ from batch size $N$, \ac{no} channel $C$, height $H$ and width $W$:
 
 \begin{align}
@@ -185,6 +187,7 @@ This module can be seen as the gradient of Conv2d with respect to its input. It 
 
 \section{Tips and Tricks}
 \begin{itemize}
+	\item \href{https://github.com/chiphuyen/machine-learning-systems-design}{Machine Learning Systems Design}
 	\item Shuffling
 	\item Data Augmentation: reshape, rescale, crops, zooming, change color (color \ac{PCA})
 	\item Normalizing the inputs\\
