--- a/Contents/robotics-intro.tex
+++ b/Contents/robotics-intro.tex
@@ -10,3 +10,13 @@ This is my personal learning notes for robotics.
 \end{itemize}
 
 \todo{}
+
+\section{Mailing Lists}
+Some mailing lists for job opportunities, \etc:
+\begin{itemize}
+	\item \href{http://robotics-worldwide.org/}{Robotics Worldwide}
+	\item \href{http://mailing.eu-robotics.net/info/community}{community@mailing.eu-robotics.net}
+	\item \href{https://web.engr.oregonstate.edu/~dambrobr/uai.html}{uai@engr.orst.edu}
+\end{itemize}
+
+These mailing lists produces several mails a day. Thus, configure your mail filtering rules accordingly if you do not want to have your regular emails drowned.
