--- a/math.tex
+++ b/math.tex
@@ -26,6 +26,7 @@ fleqn
 \mainmatter
 \include{Contents/abbrievations.tex}
 
+\include{Contents/math-introduction.tex}
 \include{Contents/matrix.tex}
 \include{Contents/math-probabilities.tex}
 \include{Contents/information-theory.tex}
