--- a/AI.tex
+++ b/AI.tex
@@ -38,6 +38,7 @@ fleqn
 \include{Contents/hyperparameter-optimization.tex}
 \include{Contents/deep-transfer-learning.tex}
 \include{Contents/technical-tools-ML.tex}
+\include{Contents/unsorted-notes-ML.tex}
 
 \backmatter
 \pagenumbering{Roman}
