--- a/Contents/technical-tools-robotics.tex
+++ b/Contents/technical-tools-robotics.tex
@@ -4,4 +4,11 @@
 This chapter talks about or at least lists out helpful tools, platforms for using/working with robotics.
 
 \section{MuJoCo}
-\href{https://youtu.be/Fiq_hpaoeH0}{MuJoCoPy Lec 2a: 2D Manipulator modeling (Part 1 of 2)}
+\begin{itemize}
+	\item \href{https://youtu.be/Fiq_hpaoeH0}{MuJoCoPy Lec 2a: 2D Manipulator modeling (Part 1 of 2)}
+\end{itemize}
+
+\section{ROS}
+\begin{itemize}
+	\item \href{https://youtube.com/playlist?list=PLE-BQwvVGf8HOvwXPgtDfWoxd4Cc6ghiP}{Programming for Robotics (ROS)}
+\end{itemize}
