--- a/learning-notes.sty
+++ b/learning-notes.sty
@@ -117,11 +117,14 @@ belowskip		= 2pt,
 	numberstyle=\tiny,
 	numbersep=5pt,
 	breaklines=true,
-	showstringspaces=false,
-	basicstyle=\footnotesize,
-	keywordstyle=\color[rgb]{0,0,1},
-	commentstyle=\color[rgb]{0,0.4,0},
-	stringstyle=\color{red}
+	showstringspaces=false,	
+	basicstyle=\ttfamily,
+	keywordstyle=\color{blue}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	commentstyle=\color{green}\ttfamily,
+	stringstyle=\color{red},
+	morecomment=[l][\color{magenta}]{\#},
+	morekeywords={nullptr, std::vector},
 }
 
 % --------------------------------------------------------------------------
