--- a/learning-notes.sty
+++ b/learning-notes.sty
@@ -147,7 +147,7 @@ block			= space
 
 \RequirePackage[printonlyused]{acronym}   % For the list of abbreviations
 \RequirePackage{siunitx}
-\sisetup{per-mode = fraction}
+%\sisetup{per-mode = fraction}
 
 % --------------------------------------------------------------------------
 %	PDF creation 
