--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -2033,6 +2033,16 @@
 	journal={arXiv preprint arXiv:2010.03409},
 	year={2020}
 }
+@article{fenwick1994new,
+	title={A new data structure for cumulative frequency tables},
+	author={Fenwick, Peter M},
+	journal={Software: Practice and experience},
+	volume={24},
+	number={3},
+	pages={327--336},
+	year={1994},
+	publisher={Wiley Online Library}
+}
 
 
 @Comment{jabref-meta: databaseType:bibtex;}
